--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,17 @@
   text-align: center;
 }
 
-.App-header {
+.App-content {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.App-post-headline a {
+  text-decoration: inherit;
+  color: inherit;
+}
+
+.App-footer {
   background-color: white;
   min-height: 100vh;
   display: flex;
